# Anthropic-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  anthropic-rag-agent-skill.md  docker-compose.yml  pyproject.toml
config/: __init__.py  golden_set.json  repos.py  repos.yaml  settings.py
config/templates/: default_qa.txt
data/evals/: native_baseline.json  ragas_baseline.json
scripts/: collect_predictions.py  prune_repos.py  run_judges.py  seed_docs.py  trim_golden_set.py  verify_hourly_tick.py
src/rag/: __init__.py  __main__.py  orchestrator.py
src/rag/corpus/: __init__.py  _github_http.py  comments.py  github_source.py  watermarks.py
src/rag/evals/: __init__.py  eval_harness.py  golden_set.py  non_llm_metrics.py  run_native_evals.py  run_ragas.py
src/rag/generate/: __init__.py  llm.py  query_engine.py
src/rag/index/: __init__.py  qdrant_store.py
src/rag/ingest/: __init__.py  embeddings.py  pipeline.py  splitters.py
src/rag/retrieve/: __init__.py  rerank.py  retriever.py
src/rag/scheduler/: __init__.py  hourly.py
src/rag/server/: __init__.py  mcp_server.py
tests/: __init__.py  test_categories.py  test_embeddings_prefixes.py  test_github_http.py  test_golden_set.py  test_non_llm_metrics.py  test_ragas_helpers.py  test_source_ids.py  test_watermarks.py
