[project]
name = "anthropic-rag"
version = "0.1.0"
description = "Live RAG pipeline over the Anthropic GitHub organization (docs + issues/PRs/comments)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "llama-index-core>=0.12",
    "llama-index-readers-github>=0.6",
    "llama-index-llms-ollama>=0.5",
    "llama-index-embeddings-ollama>=0.5",
    "llama-index-vector-stores-qdrant>=0.6",
    "llama-index-storage-docstore-redis>=0.4",
    "llama-index-postprocessor-sbert-rerank>=0.4",
    "llama-index-retrievers-bm25>=0.5",
    "qdrant-client>=1.18,<2.0",  # keep aligned with the qdrant server image in docker-compose.yml
    "redis>=5.2",
    "apscheduler>=3.11",
    "fastmcp>=2.3",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
evals = ["ragas>=0.2"]
dev = ["pytest>=8", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
