[project]
name = "anthropic-rag"
version = "0.1.0"
description = "Live RAG pipeline over the Anthropic GitHub organization (docs + issues/PRs/comments)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "llama-index-core>=0.12",
    "llama-index-readers-github>=0.6",
    "llama-index-llms-ollama>=0.5",
    "llama-index-embeddings-ollama>=0.5",
    "llama-index-vector-stores-qdrant>=0.6",
    "llama-index-storage-docstore-redis>=0.4",
    "llama-index-postprocessor-sbert-rerank>=0.4",
    "llama-index-retrievers-bm25>=0.5",
    # The bge cross-encoder reranker (SentenceTransformerRerank) needs these heavy
    # deps, which the sbert-rerank package does not bundle.
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "qdrant-client>=1.18,<2.0",  # keep aligned with the qdrant server image in docker-compose.yml
    "redis>=5.2",
    "apscheduler>=3.11",
    "fastmcp>=2.3",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# nest-asyncio: the native LlamaIndex evaluators call asyncio_run inside a sync method,
# which needs a re-entrant loop when run alongside RAGAS / any active event loop.
evals = ["ragas>=0.2", "nest-asyncio>=1.6"]
dev = ["pytest>=8", "ruff>=0.8"]

# The container runs the reranker on CPU only — pull torch from the CPU wheel index
# on Linux so the image doesn't download the ~5 GB of nvidia-* CUDA wheels PyPI's
# default torch build drags in. Windows/mac hosts keep the normal PyPI wheel.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
# Operational scripts bootstrap sys.path (repo root + src) before importing the
# package, so their imports intentionally come after that setup.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
